# basedbook-frontend

./: .env.development  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  capacitor.config.ts  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  cd.yml.temp  docker-image.yml  node.js.yml  tests.yml
android/app/: build.gradle
public/: index.html
src/: App.tsx  axios.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  mobile.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/Components/: Avatar.module.css  Avatar.tsx  Button.module.css  Button.tsx  Checkbox.module.css  Checkbox.tsx  Input.module.css  Input.tsx  LinkBase.module.css  LinkBase.tsx  LinkSection.module.css  LinkSection.tsx  LoadingSpinner.tsx  SearchResult.module.css  SearchResult.tsx  Searchbar.module.css  Searchbar.tsx  Textarea.module.css  Textarea.tsx
src/Layout/: ComingSoon.module.css  ComingSoon.tsx  ErrorElement.module.css  ErrorElement.tsx  Link.module.css  Link.tsx  Modal.module.css  Modal.tsx  Section.module.css  Section.tsx  SideBar.module.css  SideBar.tsx  Sidebar.module.css  Sidebar.tsx  Wrapper.module.css  Wrapper.tsx
src/Layout/ModalComponents/: AddPostModal.module.css  AddPostModal.tsx  AddProjectModal.module.css  AddProjectModal.tsx  CreateChatModal.module.css  CreateChatModal.tsx  DeleteModal.tsx  Enable2FAModal.tsx  FollorwersModal.tsx  FollowersModal.tsx  FollowingModal.tsx  (+8 more)
src/Lib/: getUser.ts
src/Sites/: Main.module.css  Main.tsx
(+82 files in other folders)
